--- a/example/package.json
+++ b/example/package.json
@@ -18,7 +18,8 @@
     "dependencies": {
         "cytoscape": "^3.19.0",
         "cytoscape-cxtmenu": "^3.4.0",
-        "cytoscape-fcose": "^2.0.0",
-        "cytoscape-html-node": "^2.1.0"
+        "cytoscape-fcose": "2.0.0",
+        "cytoscape-html-node": "^2.1.0",
+        "cytoscape-transaction-layout": "^1.0.0"
     }
 }
