--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "dependencies": {
         "app-root-path": "^3.0.0",
         "cytoscape": "^3.19.0",
-        "cytoscape-fcose": "^2.1.0",
+        "cytoscape-fcose": "2.0.0",
         "cytoscape-html-node": "^2.0.14"
     }
 }
